--- a/about.html
+++ b/about.html
@@ -277,12 +277,12 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Personal Website</a>
+      <a class="navbar-brand" href="index.html">Coursera Assignment</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="machine_learning_project.html">Final Project</a>
 </li>
 <li>
   <a href="about.html">About Me</a>
@@ -304,7 +304,7 @@ $(document).ready(function () {
 </div>
 
 
-<p>Why I am awesome.</p>
+<p>Submitter: Tianming<br/> Date: Jan 22, 2021<br/> Github repo: <a href="https://github.com/timmy1027/PML.github.io" class="uri">https://github.com/timmy1027/PML.github.io</a></p>
 
 
 
