--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Personal Website</title>
+<title>Practical Machine Learning</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -277,12 +277,12 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Personal Website</a>
+      <a class="navbar-brand" href="index.html">Coursera Assignment</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">Home</a>
+  <a href="machine_learning_project.html">Final Project</a>
 </li>
 <li>
   <a href="about.html">About Me</a>
@@ -299,12 +299,12 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Personal Website</h1>
+<h1 class="title toc-ignore">Practical Machine Learning</h1>
 
 </div>
 
 
-<p>Hello, World!</p>
+<p>Final Project by Tianming</p>
 
 
 
